[package]
name = "universal-audio-decoder"
version = "0.1.0"
authors = ["TonalidadeHidrica <47710717+TonalidadeHidrica@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.12.1"
rodio = { version = "0.13.0", path = "../rodio" }
ogg = { version = "0.8.0", path = "../ogg" }
lewton = { version = "0.10.2", path = "../lewton" }
